# EchoTourist

./: .dockerignore  .env.example  .gitignore  Makefile  README.md  TODO.md  docker-compose.prod.yml  docker-compose.yml  package-lock.json  package.json
src/backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  celerybeat-schedule  main.py  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 04e188fec6fc_add_attraction_wishlist_ticket_order_.py  13ba84d9cf34_add_tour_sort_order.py  31459b62fab7_add_area_code_and_serial_number.py  394f8a2b1c6d_add_translation_highlights_includes_excludes.py  5bf1e9edbde4_initial_schema.py  87d127812610_add_attraction_media_table.py  a1b2c3d4e5f6_add_tour_theme.py  af36124973cc_initial.py  c2bd43b70559_merge_tour_sort_order_and_enquiries_.py  d1e956a7b8c9_add_custom_tour_models.py  f7e8d9c0b1a2_create_enquiries_table.py
src/backend/app/: config.py  database.py
src/backend/app/api/: dependencies.py
src/backend/app/cache/: __init__.py  client.py  decorators.py
src/backend/app/core/: error_handlers.py  exceptions.py  response.py  security.py
src/backend/app/crud/: __init__.py  attraction.py  attraction_ticket.py  attraction_wishlist.py  base.py  custom_tour.py  destination.py  enquiry.py  order.py  review.py  tour.py  user.py  wishlist.py
src/backend/app/models/: __init__.py  attraction.py  custom_tour.py  (+10 more)
src/backend/scripts/: cleanup_test_data.py  seed_data.py
src/backend/tests/: conftest.py  test_concurrency.py  test_edge_cases.py  test_negative_path.py  test_regression.py  test_security.py
(+231 files in other folders)
